test/errors/python_generator_error/zs/api_clashing/api_package_with_api_clash_error/api/some_package.zs
package api_clashing.api_package_with_api_clash_error.api.some_package;

struct SomeStruct
{
    float32 field;
};
